Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI429.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned char * LPBYTE;
typedef unsigned short USHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef unsigned long * LPMSGADDR;
typedef int BOOL;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
typedef int SCHNDX;
BTI429API ERRVAL __stdcall BTI429_SchedBuildExxx(INT nummsgs,LPMSGADDR msgaddr,LPINT minperiod,LPINT maxperiod,BOOL speed,INT channum,BOOL debug,BOOL microflag,INT algorithm,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedBuildExxxx(INT nummsgs,LPMSGADDR msgaddr,LPINT minperiod,LPINT maxperiod,BOOL speed,INT channum,BOOL debug,BOOL microflag,INT algorithm,BOOL interceptflag,HCORE handleval);
BTI429API ULONG __stdcall BTI429_SchedCalc(LPVOID infoptr);
BTI429API SCHNDX __stdcall BTI429_SchedCallEx(USHORT condition1,USHORT condition2,SCHNDX destindex,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedCheck(LPINT minperiod,LPINT maxperiod,LPVOID infoptr);
BTI429API VOID __stdcall BTI429_SchedCheckEnd(VOID);
BTI429API VOID __stdcall BTI429_SchedCheckMiddle(ULONG msgnum,ULONG minlen,ULONG midlen,ULONG maxlen);
BTI429API VOID __stdcall BTI429_SchedCheckReal(ULONG msgnum,ULONG minlen,ULONG midlen,ULONG maxlen);
BTI429API VOID __stdcall BTI429_SchedCheckStart(VOID);
BTI429API ULONG __stdcall BTI429_SchedConflicts(LPVOID infoptr);
BTI429API ERRVAL __stdcall BTI429_SchedDivide(LPVOID infoptr);
BTI429API ULONG __stdcall BTI429_SchedFix(LPVOID infoptr);
BTI429API VOID __stdcall BTI429_SchedFixEnd(VOID);
BTI429API VOID __stdcall BTI429_SchedFixMiddle(ULONG conflicts);
BTI429API VOID __stdcall BTI429_SchedFixStart(VOID);
BTI429API VOID __stdcall BTI429_SchedHook(INT index,LPVOID ptr);
BTI429API ERRVAL __stdcall BTI429_SchedInsert(ULONG events,ULONG index,ULONG msgnum,LPMSGADDR msgaddr,ULONG gapval,BOOL interceptflag,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedInsert2(ULONG events,ULONG index,INT msgnum,LPMSGADDR msgaddr,ULONG gapval,BOOL interceptflag,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedInsertEnd(ULONG events,BOOL interceptflag,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedInsertStart(ULONG events,BOOL interceptflag,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedIntercept(INT type,MSGADDR msgaddr,ULONG gapval,INT channum,HCORE handleval);
BTI429API VOID __stdcall BTI429_SchedLayout(LPVOID infoptr);
BTI429API SCHNDX __stdcall BTI429_SchedLogEx(USHORT condition1,USHORT condition2,USHORT tagval,INT channum,HCORE handleval);
BTI429API ULONG __stdcall BTI429_SchedMaxval(LPULONG array,ULONG arraycount);
BTI429API ULONG __stdcall BTI429_SchedMinval(LPULONG array,ULONG arraycount);
BTI429API SCHNDX __stdcall BTI429_SchedNop(INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedParse(INT basemsgnum,LPMSGADDR msgaddr,INT channum,LPVOID infoptr,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedPreprocess(INT nummsgs,BOOL speedflag,LPMSGADDR msgaddrptr,LPINT minlist,LPINT maxlist,BOOL debugflag,LPINT targetlist,LPINT minorframetime,LPINT majorframetime);
BTI429API SCHNDX __stdcall BTI429_SchedPulse0(INT dionum,INT channum,HCORE handleval);
BTI429API SCHNDX __stdcall BTI429_SchedPulse1(INT dionum,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedReset(LPVOID infoptr);
BTI429API ULONG __stdcall BTI429_SchedRotate(LPVOID infoptr);
BTI429API INT __stdcall BTI429_SchedShift(INT msgnum,INT value,LPVOID infoptr);
BTI429API ERRVAL __stdcall BTI429_SchedSlide(LPVOID infoptr);
BTI429API VOID __stdcall BTI429_SchedSlideEnd(VOID);
BTI429API VOID __stdcall BTI429_SchedSlideMiddle(ULONG index,ULONG count,ULONG conflicts);
BTI429API VOID __stdcall BTI429_SchedSlideStart(ULONG factor);
BTI429API VOID __stdcall BTI429_SchedSort(LPVOID infoptr);
BTI429API ULONG __stdcall BTI429_SchedToBit(ULONG value,LPVOID infoptr);
BTI429API ULONG __stdcall BTI429_SchedToMsec(ULONG value,LPVOID infoptr);
BTI429API VOID __stdcall BTI429_SchedUnsort(LPVOID infoptr);
BTI429API SCHNDX __stdcall BTI429_SchedUser(ULONG useraddr,INT channum,HCORE handleval);
BTI429API ULONG __stdcall BTI429_SchedWalk(LPVOID infoptr);
BTI429API ERRVAL __stdcall BTI429_SchedWriteBuf(LPBYTE bufptr,INT bufcount,ULONG schaddr,INT schedcount,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_TestProtocol(HCORE handleval);
BTI429API USHORT __stdcall BTI429_Transpose12(USHORT val);
/**
*
*  Channel number constants
*
**/

#define CH0  0x0000           //Channel 0
#define	CH1  0x0001           //Channel 1
#define	CH2  0x0002           //Channel 2
#define	CH3  0x0003           //Channel 3
#define	CH4  0x0004           //Channel 4
#define	CH5  0x0005           //Channel 5
#define	CH6  0x0006           //Channel 6
#define	CH7  0x0007           //Channel 7
#define	CH8  0x0008           //Channel 8
#define	CH9  0x0009           //Channel 9
#define	CH10 0x000A           //Channel 10
#define	CH11 0x000B           //Channel 11
#define	CH12 0x000C           //Channel 12
#define	CH13 0x000D           //Channel 13
#define	CH14 0x000E           //Channel 14
#define	CH15 0x000F           //Channel 15
#define	CH16 0x0010           //Channel 16
#define	CH17 0x0011           //Channel 17
#define	CH18 0x0012           //Channel 18
#define	CH19 0x0013           //Channel 19
#define	CH20 0x0014           //Channel 20
#define	CH21 0x0015           //Channel 21
#define	CH22 0x0016           //Channel 22
#define	CH23 0x0017           //Channel 23
#define	CH24 0x0018           //Channel 24
#define	CH25 0x0019           //Channel 25
#define	CH26 0x001A           //Channel 26
#define	CH27 0x001B           //Channel 27
#define	CH28 0x001C           //Channel 28
#define	CH29 0x001D           //Channel 29
#define	CH30 0x001E           //Channel 30
#define	CH31 0x001F           //Channel 31
/**
*
*  SDI selection constants
*
**/

enum {	SDI00                 = 0x0001,           //Enable SDI00
		SDI01                 = 0x0002,           //Enable SDI01
		SDI10                 = 0x0004,           //Enable SDI10
		SDI11                 = 0x0008,           //Enable SDI11
		SDIALL                = 0x000F            //Enable all SDIs
};