Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI429VB.BAS

Public Declare Function BTI429_SchedBuildExxx Lib "BTI429.DLL" Alias "_BTI429_SchedBuildExxx@40" (ByVal nummsgs As Long, ByRef msgaddr As Long, ByRef minperiod As Long, ByRef maxperiod As Long, ByVal speed As Long, ByVal channum As Long, ByVal debugval As Long, ByVal microflag As Long, ByVal algorithm As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedBuildExxxx Lib "BTI429.DLL" Alias "_BTI429_SchedBuildExxxx@44" (ByVal nummsgs As Long, ByRef msgaddr As Long, ByRef minperiod As Long, ByRef maxperiod As Long, ByVal speed As Long, ByVal channum As Long, ByVal debugval As Long, ByVal microflag As Long, ByVal algorithm As Long, ByVal interceptflag As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedCalc Lib "BTI429.DLL" Alias "_BTI429_SchedCalc@4" (ByVal infoptr As Long) As Long
Public Declare Function BTI429_SchedCallEx Lib "BTI429.DLL" Alias "_BTI429_SchedCallEx@20" (ByVal condition1 As Integer, ByVal condition2 As Integer, ByVal destindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedCheck Lib "BTI429.DLL" Alias "_BTI429_SchedCheck@12" (ByRef minperiod As Long, ByRef maxperiod As Long, ByVal infoptr As Long) As Long
Public Declare Sub BTI429_SchedCheckEnd Lib "BTI429.DLL" Alias "_BTI429_SchedCheckEnd@0" ()
Public Declare Sub BTI429_SchedCheckMiddle Lib "BTI429.DLL" Alias "_BTI429_SchedCheckMiddle@16" (ByVal msgnum As Long, ByVal minlen As Long, ByVal midlen As Long, ByVal maxlen As Long)
Public Declare Sub BTI429_SchedCheckReal Lib "BTI429.DLL" Alias "_BTI429_SchedCheckReal@16" (ByVal msgnum As Long, ByVal minlen As Long, ByVal midlen As Long, ByVal maxlen As Long)
Public Declare Sub BTI429_SchedCheckStart Lib "BTI429.DLL" Alias "_BTI429_SchedCheckStart@0" ()
Public Declare Function BTI429_SchedConflicts Lib "BTI429.DLL" Alias "_BTI429_SchedConflicts@4" (ByVal infoptr As Long) As Long
Public Declare Function BTI429_SchedDivide Lib "BTI429.DLL" Alias "_BTI429_SchedDivide@4" (ByVal infoptr As Long) As Long
Public Declare Function BTI429_SchedFix Lib "BTI429.DLL" Alias "_BTI429_SchedFix@4" (ByVal infoptr As Long) As Long
Public Declare Sub BTI429_SchedFixEnd Lib "BTI429.DLL" Alias "_BTI429_SchedFixEnd@0" ()
Public Declare Sub BTI429_SchedFixMiddle Lib "BTI429.DLL" Alias "_BTI429_SchedFixMiddle@4" (ByVal conflicts As Long)
Public Declare Sub BTI429_SchedFixStart Lib "BTI429.DLL" Alias "_BTI429_SchedFixStart@0" ()
Public Declare Sub BTI429_SchedHook Lib "BTI429.DLL" Alias "_BTI429_SchedHook@8" (ByVal index As Long, ByVal ptr As Long)
Public Declare Function BTI429_SchedInsert Lib "BTI429.DLL" Alias "_BTI429_SchedInsert@32" (ByVal eventvals As Long, ByVal index As Long, ByVal msgnum As Long, ByRef msgaddr As Long, ByVal gapval As Long, ByVal interceptflag As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedInsert2 Lib "BTI429.DLL" Alias "_BTI429_SchedInsert2@32" (ByVal eventvals As Long, ByVal index As Long, ByVal msgnum As Long, ByRef msgaddr As Long, ByVal gapval As Long, ByVal interceptflag As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedInsertEnd Lib "BTI429.DLL" Alias "_BTI429_SchedInsertEnd@16" (ByVal eventvals As Long, ByVal interceptflag As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedInsertStart Lib "BTI429.DLL" Alias "_BTI429_SchedInsertStart@16" (ByVal eventvals As Long, ByVal interceptflag As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedIntercept Lib "BTI429.DLL" Alias "_BTI429_SchedIntercept@20" (ByVal typeval As Long, ByVal msgaddr As Long, ByVal gapval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTI429_SchedLayout Lib "BTI429.DLL" Alias "_BTI429_SchedLayout@4" (ByVal infoptr As Long)
Public Declare Function BTI429_SchedLogEx Lib "BTI429.DLL" Alias "_BTI429_SchedLogEx@20" (ByVal condition1 As Integer, ByVal condition2 As Integer, ByVal tagval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedMaxval Lib "BTI429.DLL" Alias "_BTI429_SchedMaxval@8" (ByRef arrayval As Long, ByVal arrayvalcount As Long) As Long
Public Declare Function BTI429_SchedMinval Lib "BTI429.DLL" Alias "_BTI429_SchedMinval@8" (ByRef arrayval As Long, ByVal arrayvalcount As Long) As Long
Public Declare Function BTI429_SchedNop Lib "BTI429.DLL" Alias "_BTI429_SchedNop@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedParse Lib "BTI429.DLL" Alias "_BTI429_SchedParse@20" (ByVal basevalmsgnum As Long, ByRef msgaddr As Long, ByVal channum As Long, ByVal infoptr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedPreprocess Lib "BTI429.DLL" Alias "_BTI429_SchedPreprocess@36" (ByVal nummsgs As Long, ByVal speedflag As Long, ByRef msgaddrptr As Long, ByRef minlist As Long, ByRef maxlist As Long, ByVal debugvalflag As Long, ByRef targetlist As Long, ByRef minorframetime As Long, ByRef majorframetime As Long) As Long
Public Declare Function BTI429_SchedPulse0 Lib "BTI429.DLL" Alias "_BTI429_SchedPulse0@12" (ByVal dionum As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedPulse1 Lib "BTI429.DLL" Alias "_BTI429_SchedPulse1@12" (ByVal dionum As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedReset Lib "BTI429.DLL" Alias "_BTI429_SchedReset@4" (ByVal infoptr As Long) As Long
Public Declare Function BTI429_SchedRotate Lib "BTI429.DLL" Alias "_BTI429_SchedRotate@4" (ByVal infoptr As Long) As Long
Public Declare Function BTI429_SchedShift Lib "BTI429.DLL" Alias "_BTI429_SchedShift@12" (ByVal msgnum As Long, ByVal value As Long, ByVal infoptr As Long) As Long
Public Declare Function BTI429_SchedSlide Lib "BTI429.DLL" Alias "_BTI429_SchedSlide@4" (ByVal infoptr As Long) As Long
Public Declare Sub BTI429_SchedSlideEnd Lib "BTI429.DLL" Alias "_BTI429_SchedSlideEnd@0" ()
Public Declare Sub BTI429_SchedSlideMiddle Lib "BTI429.DLL" Alias "_BTI429_SchedSlideMiddle@12" (ByVal index As Long, ByVal count As Long, ByVal conflicts As Long)
Public Declare Sub BTI429_SchedSlideStart Lib "BTI429.DLL" Alias "_BTI429_SchedSlideStart@4" (ByVal factor As Long)
Public Declare Sub BTI429_SchedSort Lib "BTI429.DLL" Alias "_BTI429_SchedSort@4" (ByVal infoptr As Long)
Public Declare Function BTI429_SchedToBit Lib "BTI429.DLL" Alias "_BTI429_SchedToBit@8" (ByVal value As Long, ByVal infoptr As Long) As Long
Public Declare Function BTI429_SchedToMsec Lib "BTI429.DLL" Alias "_BTI429_SchedToMsec@8" (ByVal value As Long, ByVal infoptr As Long) As Long
Public Declare Sub BTI429_SchedUnsort Lib "BTI429.DLL" Alias "_BTI429_SchedUnsort@4" (ByVal infoptr As Long)
Public Declare Function BTI429_SchedUser Lib "BTI429.DLL" Alias "_BTI429_SchedUser@12" (ByVal useraddr As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedWalk Lib "BTI429.DLL" Alias "_BTI429_SchedWalk@4" (ByVal infoptr As Long) As Long
Public Declare Function BTI429_SchedWriteBuf Lib "BTI429.DLL" Alias "_BTI429_SchedWriteBuf@20" (ByRef bufptr As Byte, ByVal bufcount As Long, ByVal schaddr As Long, ByVal schedcount As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_TestProtocol Lib "BTI429.DLL" Alias "_BTI429_TestProtocol@4" (ByVal handleval As Long) As Long
Public Declare Function BTI429_Transpose12 Lib "BTI429.DLL" Alias "_BTI429_Transpose12@4" (ByVal val As Integer) As Integer

'/**
'*
'*  Channel number constants
'*
'**/

Public Const CH0 As Integer = &H0    '//Channel 0
Public Const CH1 As Integer = &H1    '//Channel 1
Public Const CH2 As Integer = &H2    '//Channel 2
Public Const CH3 As Integer = &H3    '//Channel 3
Public Const CH4 As Integer = &H4    '//Channel 4
Public Const CH5 As Integer = &H5    '//Channel 5
Public Const CH6 As Integer = &H6    '//Channel 6
Public Const CH7 As Integer = &H7    '//Channel 7
Public Const CH8 As Integer = &H8    '//Channel 8
Public Const CH9 As Integer = &H9    '//Channel 9
Public Const CH10 As Integer = &HA   '//Channel 10
Public Const CH11 As Integer = &HB   '//Channel 11
Public Const CH12 As Integer = &HC   '//Channel 12
Public Const CH13 As Integer = &HD   '//Channel 13
Public Const CH14 As Integer = &HE   '//Channel 14
Public Const CH15 As Integer = &HF   '//Channel 15
Public Const CH16 As Integer = &H10   '//Channel 16
Public Const CH17 As Integer = &H11   '//Channel 17
Public Const CH18 As Integer = &H12   '//Channel 18
Public Const CH19 As Integer = &H13   '//Channel 19
Public Const CH20 As Integer = &H14   '//Channel 20
Public Const CH21 As Integer = &H15   '//Channel 21
Public Const CH22 As Integer = &H16   '//Channel 22
Public Const CH23 As Integer = &H17   '//Channel 23
Public Const CH24 As Integer = &H18   '//Channel 24
Public Const CH25 As Integer = &H19   '//Channel 25
Public Const CH26 As Integer = &H1A   '//Channel 26
Public Const CH27 As Integer = &H1B   '//Channel 27
Public Const CH28 As Integer = &H1C   '//Channel 28
Public Const CH29 As Integer = &H1D   '//Channel 29
Public Const CH30 As Integer = &H1E   '//Channel 30
Public Const CH31 As Integer = &H1F   '//Channel 31

'/**
'*
'*  SDI selection constants
'*
'**/

Public Const SDI00 As Long = &H1 '//Enable SDI00
Public Const SDI01 As Long = &H2 '//Enable SDI01
Public Const SDI10 As Long = &H4 '//Enable SDI10
Public Const SDI11 As Long = &H8 '//Enable SDI11
Public Const SDIALL As Long = &HF    '//Enable all SDIs

'/**
'*
'*  Channel configuration options
'*
'**/
